--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Text-A-Pic</string>
     <string name="add_contact">ADD CONTACT</string>
     <string name="add_new_contact">Add new contact</string>
+    <string name="edit_contacts">Edit contacts</string>
+    <string name="delete">Delete</string>
 </resources>
