--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="add_new_contact">Add new contact</string>
     <string name="edit_contacts">Edit contacts</string>
     <string name="delete">Delete</string>
+    <string name="enable_camera">Enable camera</string>
 </resources>
