--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="write_files">Write files</string>
     <string name="grant_permissions">Grant permissions</string>
     <string name="send_sms">Send SMS</string>
+    <string name="read_sms">Read SMS</string>
 </resources>
