--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="take_photos">Take photos</string>
     <string name="write_files">Write files</string>
     <string name="grant_permissions">Grant permissions</string>
-    <string name="send_and_view_sms">Send and view SMS</string>
+    <string name="send_sms">Send SMS</string>
     <string name="sending">Sending…</string>
     <string name="sent_to">Sent to %1$s at %2$s</string>
     <string name="sms_send_error">Send send error, code: %1$s</string>
